Initial "Toy" code generation

--- a/stidgen/stidgen.fsproj
+++ b/stidgen/stidgen.fsproj
@@ -55,8 +55,10 @@
   <Import Project="$(FSharpTargetsPath)" />
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
-    <Compile Include="Program.fs" />
     <None Include="App.config" />
+    <Compile Include="Description.fs" />
+    <Compile Include="CsharpGeneration.fs" />
+    <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
