Add some extensions to roslyn

--- a/stidgen/stidgen.fsproj
+++ b/stidgen/stidgen.fsproj
@@ -57,6 +57,7 @@
     <Compile Include="AssemblyInfo.fs" />
     <None Include="App.config" />
     <Compile Include="Description.fs" />
+    <Compile Include="FluentRoslyn.fs" />
     <Compile Include="CsharpGeneration.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
