Allow generation to a file from Program.cs

--- a/stidgen/stidgen.fsproj
+++ b/stidgen/stidgen.fsproj
@@ -27,6 +27,7 @@
     <Prefer32Bit>true</Prefer32Bit>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <WarningsAsErrors />
+    <StartArguments>"c:\users\vbfox\documents\visual studio 14\Projects\ConsoleApplication8\ConsoleApplication8\TestId.cs"</StartArguments>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
