Make value a readonly field
Fixes #2

--- a/stidgen/stidgen.fsproj
+++ b/stidgen/stidgen.fsproj
@@ -61,6 +61,7 @@
     <None Include="App.config" />
     <Compile Include="Description.fs" />
     <Compile Include="FluentRoslyn.fs" />
+    <Compile Include="FirstChar.fs" />
     <Compile Include="CsharpGeneration.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
