--- a/UnitTests/App.config
+++ b/UnitTests/App.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup>
+    <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
 <runtime><assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -71,6 +71,14 @@
   <dependentAssembly>
     <assemblyIdentity name="System.Composition.TypedParts" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
     <bindingRedirect oldVersion="0.0.0.0-1.0.30.0" newVersion="1.0.30.0" />
+  </dependentAssembly>
+  <dependentAssembly>
+    <assemblyIdentity name="NFluent" publicKeyToken="18828b37b84b1437" culture="neutral" />
+    <bindingRedirect oldVersion="0.0.0.0-1.3.1.0" newVersion="1.3.1.0" />
+  </dependentAssembly>
+  <dependentAssembly>
+    <assemblyIdentity name="nunit.framework" publicKeyToken="96d09a1eb7f44a77" culture="neutral" />
+    <bindingRedirect oldVersion="0.0.0.0-2.6.4.14350" newVersion="2.6.4.14350" />
   </dependentAssembly>
   <dependentAssembly>
     <assemblyIdentity name="System.Collections.Immutable" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
