--- a/UnitTests/UnitTests.fsproj
+++ b/UnitTests/UnitTests.fsproj
@@ -32,19 +32,6 @@
     <WarningLevel>3</WarningLevel>
     <DocumentationFile>bin\Release\UnitTests.XML</DocumentationFile>
   </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="mscorlib" />
-    <Reference Include="FSharp.Core, Version=$(TargetFSharpCoreVersion), Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Numerics" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="AssemblyInfo.fs" />
-    <Compile Include="CsharpGenerationTests.fs" />
-  </ItemGroup>
   <PropertyGroup>
     <MinimumVisualStudioVersion Condition="'$(MinimumVisualStudioVersion)' == ''">11</MinimumVisualStudioVersion>
   </PropertyGroup>
@@ -69,6 +56,18 @@
   </Target>
   -->
   <ItemGroup>
+    <Compile Include="AssemblyInfo.fs" />
+    <Content Include="App.config" />
+    <Compile Include="CsharpGenerationTests.fs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="mscorlib" />
+    <Reference Include="FSharp.Core, Version=$(TargetFSharpCoreVersion), Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Numerics" />
     <ProjectReference Include="..\stidgen\stidgen.fsproj">
       <Name>stidgen</Name>
       <Project>{0a78f77f-6316-406d-9a1e-da3dfe87443b}</Project>
