Try to get the last version of mono under TravisCI

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: csharp
 
-sudo: false  # use the new container-based Travis infrastructure 
+sudo: false  # use the new container-based Travis infrastructure
 
 script:
   - ./build.sh
+
+mono:
+  - latest
