--- a/src/BlackFox.Stidgen/BlackFox.Stidgen.fsproj
+++ b/src/BlackFox.Stidgen/BlackFox.Stidgen.fsproj
@@ -59,6 +59,7 @@
     <Compile Include="AssemblyInfo.fs" />
     <None Include="App.config" />
     <Compile Include="Description.fs" />
+    <Compile Include="Result.fs" />
     <Compile Include="ConfigurationParser.fs" />
     <Compile Include="FluentRoslyn.fs" />
     <Compile Include="FirstChar.fs" />
