Add NuGet package generation
Using paket "pack" command as it's done in project scaffold

--- a/src/BlackFox.Stidgen/BlackFox.Stidgen.fsproj
+++ b/src/BlackFox.Stidgen/BlackFox.Stidgen.fsproj
@@ -67,6 +67,7 @@
     <Compile Include="FileGeneration.fs" />
     <Compile Include="Program.fs" />
     <None Include="paket.references" />
+    <None Include="paket.template" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
