Add a way to do better unit tests
Also add some unit tests to try it out, lots of them are missing but it
is moving smoothly.

#1

--- a/tests/BlackFox.Stidgen.Tests/BlackFox.Stidgen.Tests.fsproj
+++ b/tests/BlackFox.Stidgen.Tests/BlackFox.Stidgen.Tests.fsproj
@@ -58,6 +58,7 @@
     <Compile Include="AssemblyInfo.fs" />
     <Content Include="App.config" />
     <None Include="paket.references" />
+    <Compile Include="CsharpCodeTesting.fs" />
     <Compile Include="CsharpGenerationTests.fs" />
     <Compile Include="ConfigurationParserTests.fs" />
   </ItemGroup>
