--- a/src/BlackFox.Stidgen/App.config
+++ b/src/BlackFox.Stidgen/App.config
@@ -1,19 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup>
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-    </startup>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+  </startup>
 <runtime><assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
   <dependentAssembly>
-    <assemblyIdentity name="Microsoft.CodeAnalysis.CSharp.Workspaces.Desktop" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-    <bindingRedirect oldVersion="0.0.0.0-1.0.0.0" newVersion="1.0.0.0" />
+    <assemblyIdentity name="FSharp.Core" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+    <bindingRedirect oldVersion="0.0.0.0-4.4.0.0" newVersion="4.4.0.0" />
   </dependentAssembly>
   <dependentAssembly>
     <assemblyIdentity name="Microsoft.CodeAnalysis.CSharp.Workspaces" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-    <bindingRedirect oldVersion="0.0.0.0-1.0.0.0" newVersion="1.0.0.0" />
-  </dependentAssembly>
-  <dependentAssembly>
-    <assemblyIdentity name="Microsoft.CodeAnalysis.CSharp.Desktop" publicKeyToken="31bf3856ad364e35" culture="neutral" />
     <bindingRedirect oldVersion="0.0.0.0-1.0.0.0" newVersion="1.0.0.0" />
   </dependentAssembly>
   <dependentAssembly>
@@ -21,23 +17,11 @@
     <bindingRedirect oldVersion="0.0.0.0-1.0.0.0" newVersion="1.0.0.0" />
   </dependentAssembly>
   <dependentAssembly>
-    <assemblyIdentity name="Microsoft.CodeAnalysis.Desktop" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-    <bindingRedirect oldVersion="0.0.0.0-1.0.0.0" newVersion="1.0.0.0" />
-  </dependentAssembly>
-  <dependentAssembly>
     <assemblyIdentity name="Microsoft.CodeAnalysis" publicKeyToken="31bf3856ad364e35" culture="neutral" />
     <bindingRedirect oldVersion="0.0.0.0-1.0.0.0" newVersion="1.0.0.0" />
   </dependentAssembly>
   <dependentAssembly>
-    <assemblyIdentity name="Microsoft.CodeAnalysis.VisualBasic.Workspaces.Desktop" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-    <bindingRedirect oldVersion="0.0.0.0-1.0.0.0" newVersion="1.0.0.0" />
-  </dependentAssembly>
-  <dependentAssembly>
     <assemblyIdentity name="Microsoft.CodeAnalysis.VisualBasic.Workspaces" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-    <bindingRedirect oldVersion="0.0.0.0-1.0.0.0" newVersion="1.0.0.0" />
-  </dependentAssembly>
-  <dependentAssembly>
-    <assemblyIdentity name="Microsoft.CodeAnalysis.VisualBasic.Desktop" publicKeyToken="31bf3856ad364e35" culture="neutral" />
     <bindingRedirect oldVersion="0.0.0.0-1.0.0.0" newVersion="1.0.0.0" />
   </dependentAssembly>
   <dependentAssembly>
@@ -73,11 +57,19 @@
     <bindingRedirect oldVersion="0.0.0.0-1.0.30.0" newVersion="1.0.30.0" />
   </dependentAssembly>
   <dependentAssembly>
+    <assemblyIdentity name="NFluent" publicKeyToken="18828b37b84b1437" culture="neutral" />
+    <bindingRedirect oldVersion="0.0.0.0-1.3.1.0" newVersion="1.3.1.0" />
+  </dependentAssembly>
+  <dependentAssembly>
+    <assemblyIdentity name="nunit.framework" publicKeyToken="96d09a1eb7f44a77" culture="neutral" />
+    <bindingRedirect oldVersion="0.0.0.0-2.6.4.14350" newVersion="2.6.4.14350" />
+  </dependentAssembly>
+  <dependentAssembly>
     <assemblyIdentity name="System.Collections.Immutable" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-    <bindingRedirect oldVersion="0.0.0.0-1.1.33.0" newVersion="1.1.33.0" />
+    <bindingRedirect oldVersion="0.0.0.0-1.1.37.0" newVersion="1.1.37.0" />
   </dependentAssembly>
   <dependentAssembly>
     <assemblyIdentity name="System.Reflection.Metadata" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-    <bindingRedirect oldVersion="0.0.0.0-1.0.18.0" newVersion="1.0.18.0" />
+    <bindingRedirect oldVersion="0.0.0.0-1.0.22.0" newVersion="1.0.22.0" />
   </dependentAssembly>
 </assemblyBinding></runtime></configuration>
