Add Glob support
The command line now both support multiple files and globs

Fixes #32

--- a/src/BlackFox.Stidgen/BlackFox.Stidgen.fsproj
+++ b/src/BlackFox.Stidgen/BlackFox.Stidgen.fsproj
@@ -66,6 +66,7 @@
     <Compile Include="FirstChar.fs" />
     <Compile Include="CsharpGeneration.fs" />
     <Compile Include="FileGeneration.fs" />
+    <Compile Include="Globbing.fs" />
     <Compile Include="Program.fs" />
     <None Include="paket.references" />
     <None Include="paket.template" />
