Add more tests for Parse/TryParse

--- a/tests/BlackFox.Stidgen.Tests/BlackFox.Stidgen.Tests.fsproj
+++ b/tests/BlackFox.Stidgen.Tests/BlackFox.Stidgen.Tests.fsproj
@@ -63,6 +63,7 @@
     <Compile Include="CsharpCodeTesting.fs" />
     <Compile Include="CsharpGenerationTests.fs" />
     <Compile Include="ConfigurationParserTests.fs" />
+    <Compile Include="ParseTests.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
