Add SourceLinked-pdb to generated NuGet

--- a/src/BlackFox.Stidgen/paket.template
+++ b/src/BlackFox.Stidgen/paket.template
@@ -16,5 +16,6 @@ description
     Strongly Typed ID type Generator
 files
     ../../bin/BlackFox.Stidgen/*.dll ==> tools
+    ../../bin/BlackFox.Stidgen/*.pdb ==> tools
     ../../bin/BlackFox.Stidgen/*.exe ==> tools
     ../../bin/BlackFox.Stidgen/*.config ==> tools
