Git don't touch my files

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,17 +1,23 @@
-# Auto detect text files and perform LF normalization
-* text=auto
+# Git don't touch my files please
+*			-text 
 
 # Custom for Visual Studio
-*.cs     diff=csharp
+*.cs		diff=csharp
+*.sln		merge=union
+*.csproj	merge=union
+*.vbproj	merge=union
+*.fsproj	merge=union
+*.dbproj	merge=union
 
 # Standard to msysgit
-*.doc	 diff=astextplain
-*.DOC	 diff=astextplain
-*.docx diff=astextplain
-*.DOCX diff=astextplain
-*.dot  diff=astextplain
-*.DOT  diff=astextplain
-*.pdf  diff=astextplain
-*.PDF	 diff=astextplain
-*.rtf	 diff=astextplain
-*.RTF	 diff=astextplain
+*.exe		-diff
+*.doc		diff=astext plain
+*.DOC		diff=astext plain
+*.docx		diff=astext plain
+*.DOCX		diff=astext plain
+*.dot		diff=astext plain
+*.DOT		diff=astext plain
+*.pdf		diff=astext plain
+*.PDF		diff=astext plain
+*.rtf		diff=astext plain
+*.RTF		diff=astext plain
