--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,7 +3,7 @@ branches:
     - master
 os: Windows Server 2012
 cache:
-  - packages
+  - %LocalAppData%\NuGet\Cache -> paket.lock
 build_script:
   - ps: .\build.cmd CI
 test: off
