Add color output & message when nothing is selected

--- a/src/BlackFox.Stidgen/BlackFox.Stidgen.fsproj
+++ b/src/BlackFox.Stidgen/BlackFox.Stidgen.fsproj
@@ -69,6 +69,7 @@
     <Compile Include="CsharpGeneration.fs" />
     <Compile Include="FileGeneration.fs" />
     <Compile Include="Globbing.fs" />
+    <Compile Include="ColoredString.fs" />
     <Compile Include="Program.fs" />
     <None Include="paket.references" />
     <None Include="paket.template">
