--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,6 +2,7 @@ branches:
   only:
     - master
 os: Windows Server 2012
+version: '{build}'
 cache:
   - "%LocalAppData%\\NuGet\\Cache -> paket.lock"
 build_script:
