--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: csharp
 sudo: false  # use the new container-based Travis infrastructure
 
 script:
-  - ./build.sh
+  - ./build.sh CI
 
 mono:
   - latest
