--- a/circle.yml
+++ b/circle.yml
@@ -2,12 +2,12 @@ dependencies:
   pre:
     - sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 3FA7E0328081BFF6A14DA29AA6A19B38D3D831EF
     - echo "deb http://download.mono-project.com/repo/debian wheezy main" | sudo tee /etc/apt/sources.list.d/mono-xamarin.list
-    - sudo apt-get update; sudo apt-get install mono-complete
+    - sudo apt-get update
+    - sudo apt-get install mono-complete fsharp
     - ./paket.sh restore
   cache_directories:
     - "packages"
     - "paket-files"
 test:
   override:
-    - export TERM=xterm-256color
     - ./build.sh CI
