--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,6 +5,7 @@ os: Windows Server 2012
 version: '{build}'
 cache:
   - "%LocalAppData%\\NuGet\\Cache -> paket.lock"
+  - "paket-files -> paket.lock"
 build_script:
   - ps: .\build.cmd CI
 test: off
