Use a separate dependency group for build script

--- a/src/BlackFox.Stidgen.Build/BlackFox.Stidgen.Build.fsproj
+++ b/src/BlackFox.Stidgen.Build/BlackFox.Stidgen.Build.fsproj
@@ -5,7 +5,7 @@
     <OutputType>Exe</OutputType>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="..\..\paket-files\vbfox\FoxSharp\src\BlackFox.FoxSharp\CommandLine.fs">
+    <Compile Include="..\..\paket-files\build\vbfox\FoxSharp\src\BlackFox.FoxSharp\CommandLine.fs">
       <Paket>True</Paket>
       <Link>paket-files/CommandLine.fs</Link>
     </Compile>
